force-app/main/default/objects/Litmos_Team_Member__c/Litmos_Team_Member__c.object-meta.xml
<CustomObject>
    <description>Associates users with team members</description>
    <label>Litmos Team Member</label>
    <nameField>
        <displayFormat>TM-{00000}</displayFormat>
        <label>Litmos Team Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Litmos Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>