force-app/main/default/objects/Litmos_Team_Member__c/fields/Learner__c.field-meta.xml
<CustomField>
    <fullName>Learner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Litmos Team Members</relationshipLabel>
    <relationshipName>Litmos_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>