force-app/main/default/objects/Litmos_Team_Member__c/fields/Litmos_Team__c.field-meta.xml
<CustomField>
    <fullName>Litmos_Team__c</fullName>
    <label>Litmos Team</label>
    <referenceTo>Litmos_Team__c</referenceTo>
    <relationshipLabel>Litmos Team Members</relationshipLabel>
    <relationshipName>Litmos_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>