force-app/main/default/objects/Litmos_Team_Member__c/fields/Litmos_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Litmos_User_Id__c</fullName>
    <label>Litmos User Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>